<resources>
    <string name="app_name">News Stories</string>

    <string name="no_stories">No stories at the moment.</string>
    <string name="poem">She went to the cobbler’s
        \nTo buy him some shoes,
        \nBut when she came back
        \nHe was reading the news.</string>
    <string name="poem_info">Mother Goose\'s nursery rhymes
        \nPublisher: London, New York: George Routledge and Sons, 1877</string>
    <string name="no_connection">No internet connection.</string>
    <string name="author_unknown">Author is unknown</string>

    <!-- Menu items -->
    <string name="news_categories">News Categories</string>
    <string name="home">Home</string>
    <string name="technology">Technology</string>
    <string name="law">Law</string>
    <string name="science">Science</string>
    <string name="education">Education</string>
    <string name="travel">Travel</string>
    <string name="music">Music</string>
    <string name="film">Film</string>
    <string name="art_and_design">Art and design</string>
    <string name="fashion">Fashion</string>
    <string name="crosswords">Crosswords</string>
    <string name="about_application">About application</string>
    <string name="settings">Settings</string>
    <string name="choose_category">Choose category!</string>
    <string name="drawer_opened">Navigation drawer opened</string>
    <string name="drawer_closed">Navigation drawer closed</string>

    <!--About application page -->
    <string name="author_image">Author image</string>
    <string name="about_app_description">Application created by Greta Grigutė as part of
        Google developer Android Basics Nanodegree, 6th project.
        \n\n<b>Pictures:</b>
        \n\n Illustrations used for \"no internet\" and \"no stories\" images from https://www.oldbookillustrations.com/illustrations
        \n\n Photo in Drawer heading (modified - cropped) by Samuel Zeller on https://unsplash.com
        \n\n Photo used when no images available (modified - cropped, added text \"no images available\") - by Florian Klauer on https://unsplash.com
        \n\n Image for App icon -  modified, Newspapers from https://www.publicdomainpictures.net
        \n\n<b>News source:</b> https://open-platform.theguardian.com, https://www.theguardian.com
        \n\n<b>Icons:</b> https://material.io/icons
        \n\n<b>Main colors</b> used in app were generated with the help of https://coolors.co.
        \n\n<b>Custom ripple effect solution:</b>
        \nhttps://stackoverflow.com/questions/30931889/adding-ripple-effect-to-recyclerview-item/30933094#30933094
        \nand to be able to apply it on card view: https://stackoverflow.com/a/28041873/5770629
        \n\n<b>Hexagon shape solution for Categories button:</b>
        \nhttps://stackoverflow.com/questions/37296863/how-to-create-hexagon-shape-in-xml-format
        \n\n<b>Coordinator layout learning sources:</b>
        \nhttps://developer.android.com/reference/android/support/design/widget/CoordinatorLayout.html
        \nhttp://saulmm.github.io/mastering-coordinator https://lab.getbase.com/introduction-to-coordinator-layout-on-android
        \n\n<b>Recycler view learning sources:</b>
        \nhttp://www.vogella.com/tutorials/AndroidRecyclerView/article.html
        \nhttps://www.androidhive.info/2016/01/android-working-with-recycler-view
        \n\n<b>Retrieving Android API version programmatically:</b>
        \nhttps://stackoverflow.com/questions/3423754/retrieving-android-api-version-programmatically
        \n\n<b>How to add button tint programmatically:</b>
        \nhttps://stackoverflow.com/questions/29801031/how-to-add-button-tint-programmatically
        \n\n<b>Solution for storing API key (note: in the build gradle file you have to take care of all build types!):</b>
        \nhttps://medium.com/code-better/hiding-api-keys-from-your-android-repository-b23f5598b906
        \n\n<b>How to customize preference checkbox appearance:</b>
        \nhttps://stackoverflow.com/questions/9539786/android-how-to-adjust-margin-padding-in-preference
        </string>
    <string name="email">greta.klimaite@gmail.com</string>
    <string name="feedback">Feedback about \"News Stories\" application</string>

    <!-- Preferences keys -->
    <string name="show_all" translatable="false">show_all</string>
    <string name="technology_key" translatable="false">technology</string>
    <string name="law_key" translatable="false">law</string>
    <string name="science_key" translatable="false">science</string>
    <string name="education_key" translatable="false">education</string>
    <string name="travel_key" translatable="false">travel</string>
    <string name="music_key" translatable="false">music</string>
    <string name="film_key" translatable="false">film</string>
    <string name="art_and_design_key" translatable="false">artanddesign</string>
    <string name="fashion_key" translatable="false">fashion</string>
    <string name="crosswords_key" translatable="false">crosswords</string>
    <string name="pref_number_key" translatable="false">pref_number_key</string>
    <string name="pref_order_by_key" translatable="false">pref_order_by_key</string>


    <!--Default preference values -->
    <string name="pref_number_default_value" translatable="false">10</string>
    <string name="pref_default_value_true" translatable="false">true</string>
    <string name="pref_order_by_default_value" translatable="false">newest</string>
    <string name="newest_value" translatable="false">newest</string>
    <string name="oldest_value" translatable="false">oldest</string>
    <string name="relevance_value" translatable="false">relevance</string>

    <!-- Preferences titles -->
    <string name="pref_number_title">Choose number of Stories per Category (from 1 to 50)</string>
    <string name="pref_choose_categories_title">Choose News Stories Categories</string>
    <string name="pref_show_all_title">Show all categories</string>
    <string name="order_by_title">Order your stories by:</string>
    <string name="newest_title">Newest</string>
    <string name="oldest_title">Oldest</string>
    <string name="relevance_title">Relevance</string>

    <!--Preference summary -->
    <string name="pref_summary_off_hidden">Hidden</string>
    <string name="pref_summary_on_show">Show</string>

    <!--Content description for images -->
    <string name="contentdesc_mailbox">Image with mailbox full of newspapers</string>
    <string name="dog_reading_news">Dog reading news</string>
    <string name="man_falling">Man falling of the chair</string>
    <string name="illustrative_image">Illustrative image</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_key">FavoriteSelected_key</string>

    <array name="pref_order_by_titles">
        <item>@string/newest_title</item>
        <item>@string/oldest_title</item>
        <item>@string/relevance_title</item>
    </array>

    <array name="pref_order_by_values">
        <item>@string/newest_value</item>
        <item>@string/oldest_value</item>
        <item>@string/relevance_value</item>
    </array>
</resources>
