<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home" />

        <item
            android:id="@+id/technology"
            android:title="@string/technology" />

        <item
            android:id="@+id/law"
            android:title="@string/law" />

        <item
            android:id="@+id/science"
            android:title="@string/science" />

        <item
            android:id="@+id/education"
            android:title="@string/education" />

        <item
            android:id="@+id/travel"
            android:title="@string/travel" />

        <item
            android:id="@+id/music"
            android:title="@string/music" />

        <item
            android:id="@+id/art_and_design"
            android:title="@string/art_and_design" />

        <item
            android:id="@+id/film"
            android:title="@string/film" />

        <item
            android:id="@+id/fashion"
            android:title="@string/fashion" />

        <item
            android:id="@+id/crosswords"
            android:title="@string/crosswords" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about_application"
            android:title="@string/about_application" />

        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
    </group>
</menu>
